# agentic_remnote_flashcard_generator

./: .gitignore  CHANGELOG.md  pyproject.toml
src/flashcard_generator/: __init__.py  main.py  model.py  prompts.py
src/flashcard_generator/utils/: gemini_agent.py
